// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes typography size if the screen is a mobile 1`] = `
<div>
  <span
    class="MuiTypography-root MuiTypography-subtitle3 css-rg8bc7-MuiTypography-root"
    data-testid="intro-hello-world-text"
  >
    Hello World
  </span>
  <div>
    <h3
      class="MuiTypography-root MuiTypography-h3 css-179ugiy-MuiTypography-root"
    >
      I'm
       
    </h3>
    <h3
      class="MuiTypography-root MuiTypography-h3 css-18j2mko-MuiTypography-root"
    >
      Kai Mumford
    </h3>
  </div>
  <div>
    <h6
      class="MuiTypography-root MuiTypography-h6 css-1e7g4y1-MuiTypography-root"
    >
      A
    </h6>
    <span
      class="index-module_type__E-SaG"
      style="display: inline; color: rgba(0, 0, 0, 0.87); font-size: 50px; font-weight: 500; font-family: Roboto;"
    />
    <span
      class="MuiTypography-root MuiTypography-body_small css-1etxp6k-MuiTypography-root"
    >
      I specialise in designing, building, and deploying high-quality and scaleable applications.
    </span>
  </div>
</div>
`;

exports[`changes typography size if the screen is a tablet 1`] = `
<div>
  <h6
    class="MuiTypography-root MuiTypography-subtitle2 css-1k12ze-MuiTypography-root"
    data-testid="intro-hello-world-text"
  >
    Hello World
  </h6>
  <div>
    <h2
      class="MuiTypography-root MuiTypography-h2 css-1i9unaa-MuiTypography-root"
    >
      I'm
       
    </h2>
    <h2
      class="MuiTypography-root MuiTypography-h2 css-1pcv00w-MuiTypography-root"
    >
      Kai Mumford
    </h2>
  </div>
  <div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1kglwzg-MuiTypography-root"
    >
      A
    </h4>
    <span
      class="index-module_type__E-SaG"
      style="display: inline; color: rgba(0, 0, 0, 0.87); font-size: 50px; font-weight: 500; font-family: Roboto;"
    />
    <span
      class="MuiTypography-root MuiTypography-body_medium css-1etxp6k-MuiTypography-root"
    >
      I specialise in designing, building, and deploying high-quality and scaleable applications.
    </span>
  </div>
</div>
`;

exports[`renders with default props 1`] = `
<div>
  <h6
    class="MuiTypography-root MuiTypography-subtitle1 css-16dswr6-MuiTypography-root"
    data-testid="intro-hello-world-text"
  >
    Hello World
  </h6>
  <div>
    <h1
      class="MuiTypography-root MuiTypography-h1 css-s87qdp-MuiTypography-root"
    >
      I'm
       
    </h1>
    <h1
      class="MuiTypography-root MuiTypography-h1 css-joxogv-MuiTypography-root"
    >
      Kai Mumford
    </h1>
  </div>
  <div>
    <h4
      class="MuiTypography-root MuiTypography-h4 css-1kglwzg-MuiTypography-root"
    >
      A
    </h4>
    <span
      class="index-module_type__E-SaG"
      style="display: inline; color: rgba(0, 0, 0, 0.87); font-size: 50px; font-weight: 500; font-family: Roboto;"
    />
    <span
      class="MuiTypography-root MuiTypography-body_large css-1etxp6k-MuiTypography-root"
    >
      I specialise in designing, building, and deploying high-quality and scaleable applications.
    </span>
  </div>
</div>
`;
